<resources>
    <string name="app_name">IntelliBreath</string>

    <string name="test_title">Title Test</string>
    <string name="test_subtitle">Subtitle Test</string>
    <string name="test_battery_percentage">100%</string>
    <string name="test_speed">73</string>
    <string name="test_wreck">Collision</string>
    <string name="test_date">10/07/23</string>
    <string name="test_breathalyzer">128</string>

    <string name="fragment_over_speed">Here we will watch over speed registries</string>
    <string name="fragment_breathalyzer">Here will be shown breathalyzer registries</string>
    <string name="fragment_wrecks">Here will be shown wrecks registries</string>
    <string name="fragment_settings">Here will be shown general account settings</string>

    <string name="battery_headset">Headset Battery</string>


    <string name="breathalyzer">Alcohol</string>
    <string name="breathalyzer_unit">mg/100ml</string>

    <string name="connecting">Connecting</string>
    <string name="cancelling">Cancelling</string>
    <string name="create_account">Create account</string>

    <string name="disconnect">Disconnect</string>

    <string name="email">Email</string>
    <string name="email_confirm">Email confirm</string>

    <string name="home">Main</string>
    <string name="headset">Headset</string>
    <string name="hidden_name">Hidden name</string>
    <string name="hidden_address">Hidden address</string>

    <string name="log_in">Log In</string>
    <string name="login_in">Login In</string>
    <string name="loading">Loading</string>

    <string name="over_speed">Over speed</string>

    <string name="recover_password">Recover password</string>

    <string name="processing">Processing</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="percentage">%</string>

    <string name="saving">Saving</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="speed_unit">KM/H</string>
    <string name="search_ble_devices">Bluetooth devices found</string>

    <string name="wrecks">Wrecks</string>
    <string name="welcome">Welcome</string>

    <string name="message_function_disabled">This function is disabled</string>
    <string name="message_error_starting_connection_ble">Error connecting with device selected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="content_description_button_search_ble">Button to find BLE devices nearby</string>
</resources>